@@ -6,6 +6,7 @@ Date: ???
     - Added fuel value to tool tips for burnable fluids
     - Merged in A Sea Block Config mod
     - Disabled Bob's burner power phase setting
+    - Added compatibility for MadClown01's Extended AngelBob Minerals
   Bugfixes:
     - Fixed crash when Train Construction Site is enabled
   Info:
